# api/server.ts
@@ -84,6 +84,7 @@ const ROUTES: Record<string, ApiHandler> = {
   'GET /v1/search/clubs': getSearch,
   'GET /v1/search/events': getSearch,
   'GET /v1/search/courses': getSearch,
+  'GET /v1/search/course-subjects': getSearch,
   'GET /v1/search/programs': getSearch,
   'GET /v1/search/academic-dates': getSearch,
   'GET /v1/search/shuttles': getSearch,
